--- a/article/index.html
+++ b/article/index.html
@@ -123,11 +123,13 @@
             </ul>
           </div>
           <div id="content">
-            <ul>
-              <li><a href="/article/meditation.html"><span>Медитация — Начиная писать эту статью я никак не мог вспомнить определение этого
-              понятия. Старые тетради с путевыми записями по горным районам Китая лежат на антресолях
-              нетронутыми больше 10 лет. Там, помнится, было, что то на этот счет. Открываю антресоль,
-              несколько пачек толстых, общих тетрадей выглядят весьма угрожающе...</span></a></li>
+            <ul class="list">
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html">
+                  <span class="list__text">Связь китайской культуры с традиционными школами боевых искусств</span>
+                </a>
+              </li>
             </ul>
           </div>
         </td>
