--- a/article/index.html
+++ b/article/index.html
@@ -130,6 +130,12 @@
                   <span class="list__text">Связь китайской культуры с традиционными школами боевых искусств</span>
                 </a>
               </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/symbolism_in_the_martial_arts_of_China.html">
+                  <span class="list__text">Символизм в боевых искусствах Китая</span>
+                </a>
+              </li>
             </ul>
           </div>
         </td>
